samples/_failures_safe/1761321136_ce4711_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a9bfe30.c: In function ‘main’:
./samples/SAFE/__tmp_0a9bfe30.c:146: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0a9bfe30.c:145:5: error: expected declaration or statement at end of input
  145 |     if
      |     ^~
